--- a/app_in_good_hands/templates/index.html
+++ b/app_in_good_hands/templates/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       {% if not user.is_authenticated %}
-      <a href="" class="btn btn--large">Załóż konto</a>
+      <a href="{% url 'register' %}" class="btn btn--large">Załóż konto</a>
       {% endif %}
     </section>
 
