--- a/app_in_good_hands/templates/nav.html
+++ b/app_in_good_hands/templates/nav.html
@@ -10,12 +10,12 @@
         {% if user.is_superuser %}
         <li><a href="/admin/">panel administracyjny</a></li>
         {% endif %}
-        <li><a href="">Wyloguj</a></li>
+        <li><a href="{% url 'logout' %}">Wyloguj</a></li>
       </ul>
     </li>
     {% else %}
-    <li><a href="" class="btn btn--small btn--without-border">Zaloguj</a></li>
-    <li><a href="" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+    <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+    <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
     {% endif %}
   </ul>
 
