Profile + profile edit + change password

--- a/app_in_good_hands/templates/nav.html
+++ b/app_in_good_hands/templates/nav.html
@@ -5,8 +5,8 @@
     <li class="logged-user">
       Witaj {{ user.username }}
       <ul class="dropdown">
-        <li><a href="">Profil</a></li>
-        <li><a href="">Ustawienia</a></li>
+        <li><a href="{% url 'profile' user.id %}">Profil</a></li>
+        <li><a href="{% url 'profile_edit' user.id %}">Ustawienia</a></li>
         {% if user.is_superuser %}
         <li><a href="/admin/">panel administracyjny</a></li>
         {% endif %}
