--- a/app_in_good_hands/templates/nav.html
+++ b/app_in_good_hands/templates/nav.html
@@ -25,7 +25,7 @@
     <li><a href="{% url 'landing_page' %}#about-us" class="btn btn--without-border">O nas</a></li>
     <li><a href="{% url 'landing_page' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
     {% if user.is_authenticated %}
-    <li><a href="" class="btn btn--without-border">Przekaż dary</a></li>
+    <li><a href="{% url 'add_donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
     {% endif %}
     <li><a href="{% url 'landing_page' %}#contact" class="btn btn--without-border">Kontakt</a></li>
   </ul>
