--- a/app_in_good_hands/templates/form-confirmation.html
+++ b/app_in_good_hands/templates/form-confirmation.html
@@ -11,7 +11,7 @@
       {% include 'nav.html' %}
 
       <div class="slogan container container--90">
-          <h2>Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie informacje o odbiorze.</h2>
+          <h2>Dziękujemy! Na maila prześlemy wszelkie informacje o odbiorze.</h2>
       </div>
 
     </header>
