--- a/app_in_good_hands/templates/nav.html
+++ b/app_in_good_hands/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="container container--70">
+<nav style="position: static;" class="container container--70">
 
   <ul class="nav--actions">
     {% if user.is_authenticated %}
